--- a/2022-05-07---What-is-pyaixi.html
+++ b/2022-05-07---What-is-pyaixi.html
@@ -4,8 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
-    <meta name="description" content="A quick introduction to my blog and portfolio website" />
-    <title>SG&nbsp;Kassel – SG Kassel's website</title>
+    <title>SG&nbsp;Kassel – </title>
     <link rel="stylesheet" href="/global.css">
     <link rel="alternate" type="application/rss+xml" title="RSS Feed" href="/feed.xml"/>
     <script type="text/javascript">
@@ -106,15 +105,15 @@
     </header>
     <div class="layout">
       <div class="page">
-<p>Hi! I'm SG Kassel.</p>
-<p>I'm a web developer, a DevOps person, and a computer scientist, interested in software verification, automated reasoning/deduction, and their relationship to artificial intelligence (AI). Amongst many other things!</p>
-<p>I'm gathering my work together here, so people can find me for collaborations and paid projects through my consultancy business.</p>
-<p>I'm also posting my thoughts on various tech topics, with descriptions of my projects and where to next.</p>
-<p>If you'd like to get in touch, please use the <a href="/pages/contact">contact form here</a></p>
-<p>Here's some recent blog entries:</p>
-<p><a href="/2022-05-05---Introduction.html" class="title">Introduction</a> [Thursday 05 May 2022]</p>
-<p><a href="/2022-05-07---What-is-pyaixi.html" class="title">What is pyaixi</a> [Saturday 07 May 2022]</p>
-<p>Subscribe to the <a href="/feed.xml">RSS feed for this site here</a></p>
+<p>Anyone who's come here from the technical side of the internet likely knows of me via my <a href="https://github.com/sgkasselau/pyaixi">pyaixi</a> project.</p>
+<p>This is an implementation of a machine learning algorithm called <a href="https://pgpbpadilla.github.io/hutter-aixi">AIXI</a>.</p>
+<p>And while I give a very thorough and technical description of the background and motivation in the README there (as well as kudos to the clever minds who came up with the algorithm), I want to try to convey to a non-technical audience what this is about.</p>
+<p>AIXI is an attempt to build the kind of general artificial intelligence (or AI for short) that science fiction is filled with.</p>
+<p>It's not the most powerful approach to this - in fact, you can almost always find an algorithm that outperforms it for a certain type of problem or environment.</p>
+<p>But where it shines is that it's a <a href="http://www.hutter1.net/ai/uaibook.htm">universal artificial intelligence algorithm</a> - in that, it can always learn a little, always optimise itself a little, always do a little better. In <strong>any</strong> environment.</p>
+<p>So it's theoretically capable of learning <strong>anything</strong>. Given enough time, and enough resources.</p>
+<p>Unsupervised, so long as the environment gives it some clues on what's good and what's not.</p>
+<p>As such, it's a fascinating tool in a broader machine learning toolkit.</p>
 <div id="footer">
 
 </div>
