--- a/about.html
+++ b/about.html
@@ -4,8 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
-    <meta name="description" content="A quick introduction to my blog and portfolio website" />
-    <title>SG&nbsp;Kassel – SG Kassel's website</title>
+    <title>SG&nbsp;Kassel – About me</title>
     <link rel="stylesheet" href="/global.css">
     <link rel="alternate" type="application/rss+xml" title="RSS Feed" href="/feed.xml"/>
     <script type="text/javascript">
@@ -106,15 +105,13 @@
     </header>
     <div class="layout">
       <div class="page">
+<p><a href="./">Return to index</a></p>
 <p>Hi! I'm SG Kassel.</p>
 <p>I'm a web developer, a DevOps person, and a computer scientist, interested in software verification, automated reasoning/deduction, and their relationship to artificial intelligence (AI). Amongst many other things!</p>
 <p>I'm gathering my work together here, so people can find me for collaborations and paid projects through my consultancy business.</p>
 <p>I'm also posting my thoughts on various tech topics, with descriptions of my projects and where to next.</p>
 <p>If you'd like to get in touch, please use the <a href="/pages/contact">contact form here</a></p>
-<p>Here's some recent blog entries:</p>
-<p><a href="/2022-05-05---Introduction.html" class="title">Introduction</a> [Thursday 05 May 2022]</p>
-<p><a href="/2022-05-07---What-is-pyaixi.html" class="title">What is pyaixi</a> [Saturday 07 May 2022]</p>
-<p>Subscribe to the <a href="/feed.xml">RSS feed for this site here</a></p>
+<p>Have a lovely day!</p>
 <div id="footer">
 
 </div>
