--- a/my-portfolio.html
+++ b/my-portfolio.html
@@ -4,8 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
-    <meta name="description" content="A quick introduction to my blog and portfolio website" />
-    <title>SG&nbsp;Kassel – SG Kassel's website</title>
+    <title>SG&nbsp;Kassel – </title>
     <link rel="stylesheet" href="/global.css">
     <link rel="alternate" type="application/rss+xml" title="RSS Feed" href="/feed.xml"/>
     <script type="text/javascript">
@@ -106,15 +105,19 @@
     </header>
     <div class="layout">
       <div class="page">
-<p>Hi! I'm SG Kassel.</p>
-<p>I'm a web developer, a DevOps person, and a computer scientist, interested in software verification, automated reasoning/deduction, and their relationship to artificial intelligence (AI). Amongst many other things!</p>
-<p>I'm gathering my work together here, so people can find me for collaborations and paid projects through my consultancy business.</p>
-<p>I'm also posting my thoughts on various tech topics, with descriptions of my projects and where to next.</p>
-<p>If you'd like to get in touch, please use the <a href="/pages/contact">contact form here</a></p>
-<p>Here's some recent blog entries:</p>
-<p><a href="/2022-05-05---Introduction.html" class="title">Introduction</a> [Thursday 05 May 2022]</p>
-<p><a href="/2022-05-07---What-is-pyaixi.html" class="title">What is pyaixi</a> [Saturday 07 May 2022]</p>
-<p>Subscribe to the <a href="/feed.xml">RSS feed for this site here</a></p>
+<p>I've worn a lot of hats in the professional IT world.</p>
+<p>Project management, software architect, senior developer, desktop support, dev ops lead, even company director.</p>
+<p>I can be a one-person IT department. Build you a computer, a website, or a complex application from scratch. Or diagnose and fix it, if something's gone wrong.</p>
+<p>And if I don't know how to do something? I can learn how to. Fast. (I've made a career out of it, around <a href="https://github.com/sgkasselau">my open-source work</a>)</p>
+<p>And while I've worked on million dollar projects for billion dollar companies? (See <a href="https://www.linkedin.com/in/sgkassel">my LinkedIn profile</a> here.)</p>
+<p>I'm just as much here for the home business, the startup, the hobby project, and the labour of love.</p>
+<p>Here's some recent projects, to give you an example of how I may be able to help you:</p>
+<ul>
+<li><p>performed Search Engine Optimisation (SEO) and page speed optimisations for <a href="https://www.decorndesign.com.au/">Decor N Design</a></p></li>
+<li><p>fixed WordPress issues for the <a href="https://pinkadvocate.com/">Pink Advocate</a></p></li>
+<li><p>replaced and modernised an aging complex PHP site with a new Python/Django site, built from scratch with custom hosting and monitoring</p></li>
+</ul>
+<p>If this sound useful to you, please <a href="/pages/contact">contact me</a> - I'm happy to help however I can!</p>
 <div id="footer">
 
 </div>
