--- a/my-research.html
+++ b/my-research.html
@@ -4,8 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
-    <meta name="description" content="A quick introduction to my blog and portfolio website" />
-    <title>SG&nbsp;Kassel – SG Kassel's website</title>
+    <title>SG&nbsp;Kassel – </title>
     <link rel="stylesheet" href="/global.css">
     <link rel="alternate" type="application/rss+xml" title="RSS Feed" href="/feed.xml"/>
     <script type="text/javascript">
@@ -106,17 +105,35 @@
     </header>
     <div class="layout">
       <div class="page">
-<p>Hi! I'm SG Kassel.</p>
-<p>I'm a web developer, a DevOps person, and a computer scientist, interested in software verification, automated reasoning/deduction, and their relationship to artificial intelligence (AI). Amongst many other things!</p>
-<p>I'm gathering my work together here, so people can find me for collaborations and paid projects through my consultancy business.</p>
-<p>I'm also posting my thoughts on various tech topics, with descriptions of my projects and where to next.</p>
-<p>If you'd like to get in touch, please use the <a href="/pages/contact">contact form here</a></p>
-<p>Here's some recent blog entries:</p>
-<p><a href="/2022-05-05---Introduction.html" class="title">Introduction</a> [Thursday 05 May 2022]</p>
-<p><a href="/2022-05-07---What-is-pyaixi.html" class="title">What is pyaixi</a> [Saturday 07 May 2022]</p>
-<p>Subscribe to the <a href="/feed.xml">RSS feed for this site here</a></p>
+<div class="h"><h2 id="my-academic-background">My Academic Background</h2><a aria-hidden="true" href="#my-academic-background">[link]</a></div>
+<p>Once upon a time, I was a computer science researcher, tutor, and PhD student at the University of Queensland.</p>
+<p>My research area was in an area of artificial intelligence (AI) known as <a href="https://en.wikipedia.org/wiki/Automated_reasoning">automated reasoning</a>, and particularly, two techniques known as <a href="https://en.wikipedia.org/wiki/Model_checking">model checking</a> and <a href="https://en.wikipedia.org/wiki/Automated_theorem_proving">(automated) theorem proving</a>.</p>
+<p>To explain in a more accessible way, I was working on getting computers to automatically check important things about software - or to be more accurate, prove (check) things from mathematical descriptions of software.</p>
+<p>Object-oriented meaning organising ideas and data about things ('objects') in the real world into reusable classifications ('classes') which share the same properties.</p>
+<p>Which can then be organised and related to each other mathematically to describe software. What's known as a '<a href="https://en.wikipedia.org/wiki/Formal_specification">formal specification</a>'.</p>
+<p>Why do we want to do this? It turns out, you can prove conclusively whether a system is safe or not. Correct or not. Does the right things at all times. Before something goes wrong.</p>
+<p>This is particularly useful when the software's purpose is life or death. Say, if it's being used to control medical devices, railway systems, planes, even rockets.</p>
+<p>The whole field is known as '<a href="https://en.wikipedia.org/wiki/Software_verification">software verification</a>', and this area in particular is known as '<a href="https://en.wikipedia.org/wiki/Formal_verification#Formal_verification_for_software">formal verification</a>'</p>
+<p>(I really think the world would be a lot safer - and software a lot less buggier - if we did this more often!)</p>
+<div class="h"><h2 id="my-academic-research">My Academic Research</h2><a aria-hidden="true" href="#my-academic-research">[link]</a></div>
+<p>My research role and subsequent PhD research was about exploring the limits of this automated checking. Like much of my academic research, it was focussed around doing so in variants of an object-oriented formal specification language (Object Z) developed by my then-research supervisor, Graeme Smith.</p>
+<p>I have one publication to my name<a href="#fn1" class="footnoteRef" id="fnref1"><sup>1</sup></a>, from early in my academic career:</p>
+<p>Kassel, G. and G. Smith, <a href="https://core.ac.uk/display/14992729">Model checking Object-Z classes: Some experiments with FDR</a>, Asia-Pacific Software Engineering Conference (APSEC 2001) (2001).</p>
+<p>Sadly, I had to drop out of my PhD.</p>
+<p>But I still use the computer science I learnt during my time at uni to push forward the edges of AI research in my open-source projects.</p>
+<div class="h"><h2 id="my-current-research">My Current Research</h2><a aria-hidden="true" href="#my-current-research">[link]</a></div>
+<p>I'm interested in pathways to general AI via automated reasoning, as this better makes for <a href="https://en.wikipedia.org/wiki/Explainable_artificial_intelligence">Explainable AI</a>, the main way many researchers see that will create AI that's safe and human-friendly.</p>
+<p>To this end, I'm currently exploring integrating automated reasoning with <a href="https://en.wikipedia.org/wiki/Natural-language_understanding">natural-language understanding</a>, particularly via the amazing Python language library, the <a href="https://www.nltk.org/">Natural Language ToolKit</a></p>
+<p>I also have an older Python language project <a href="https://github.com/sgkasselau/pyaixi">pyaixi</a> that implements the <a href="http://www.hutter1.net/ai/uaibook.htm">universal artificial intelligence</a> <a href="https://pgpbpadilla.github.io/hutter-aixi">AIXI</a> algorithm. <a href="/posts/what-is-pyaixi">I explain pyaixi more here</a></p>
+<p>Please check out my <a href="/">blog posts</a> for what else I'm working on currently!</p>
 <div id="footer">
 
+</div>
+<div class="footnotes">
+<hr />
+<ol>
+<li id="fn1"><p>Anyone who's come here from the academic side of the internet may know me under a different name. If you knew me then - or just are curious - please feel free to <a href="/pages/contact">contact me</a>!<a href="#fnref1">↩</a></p></li>
+</ol>
 </div>
       </div>
     </div>
