--- a/contact.html
+++ b/contact.html
@@ -4,8 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
-    <meta name="description" content="A quick introduction to my blog and portfolio website" />
-    <title>SG&nbsp;Kassel – SG Kassel's website</title>
+    <title>SG&nbsp;Kassel – Contact me</title>
     <link rel="stylesheet" href="/global.css">
     <link rel="alternate" type="application/rss+xml" title="RSS Feed" href="/feed.xml"/>
     <script type="text/javascript">
@@ -106,15 +105,30 @@
     </header>
     <div class="layout">
       <div class="page">
-<p>Hi! I'm SG Kassel.</p>
-<p>I'm a web developer, a DevOps person, and a computer scientist, interested in software verification, automated reasoning/deduction, and their relationship to artificial intelligence (AI). Amongst many other things!</p>
-<p>I'm gathering my work together here, so people can find me for collaborations and paid projects through my consultancy business.</p>
-<p>I'm also posting my thoughts on various tech topics, with descriptions of my projects and where to next.</p>
-<p>If you'd like to get in touch, please use the <a href="/pages/contact">contact form here</a></p>
-<p>Here's some recent blog entries:</p>
-<p><a href="/2022-05-05---Introduction.html" class="title">Introduction</a> [Thursday 05 May 2022]</p>
-<p><a href="/2022-05-07---What-is-pyaixi.html" class="title">What is pyaixi</a> [Saturday 07 May 2022]</p>
-<p>Subscribe to the <a href="/feed.xml">RSS feed for this site here</a></p>
+<p><a href="./">Return to index</a></p>
+<p>Thanks for wanting to get in touch!</p>
+<p>If you're looking to hire me for a paid project, please be aware that I have <strong>5 hours per week</strong> of capacity to spare currently. If this works for you, please don't hesitate to use the form below!</p>
+<p>If you're looking to collaborate with me on one of my open-source projects, you might find making a pull request on that project via <a href="https://github.com/sgkasselau">my GitHub page</a> to be the fastest way to get started.</p>
+<p>Whatever you need, feel free to send me a message via the contact form below. I'll try to get back to you ASAP!</p>
+<script src="https://www.google.com/recaptcha/api.js" type="text/javascript"></script>
+<script type="text/javascript">
+  function onSubmit(token) {
+    document.getElementById("contact-form").submit();
+  }
+</script>
+<form action="https://r9kec3gv0m.execute-api.us-east-1.amazonaws.com/prod/?format=html" id="contact-form" method="post" name="contact-form" style="display:inline-block">
+<input type="text" id="_to" name="_to" style="display:none"
+   value="d138dbeed4e18a2e48e4f0ee9233ba302584fca61a540b6febdf222e3a8d08dc3079d309bc69b2627dd88d574000ab58bf736d1074f3caa3b5c843272a3fb6d740f1a10496858696ae2aa03661f425d8b3eb16326684e2655e56c914de507e1c1280738f14b9d5c4b02c7462a7cc938da1ac1e0f6a6fcddcb88287ef106ef11be49050bc81abf3"> <input type="text" id="_recaptcha" name="_recaptcha" style="display:none" value=""> <input type="text" id="sitekey" name="sitekey" style="display:none" value="6LdqXTUfAAAAAILrJyIirDoLCYJg8iKnIE5HosYO"> <input type="text" id="_honeypot" name="_honeypot" style="display:none" value=""> <label for="name">Your Name</label><br> <input type="text" id="name" style="margin-bottom:16px" name="name"><br> <label for="email">Your Email</label><br> <input type="text" id="email" style="margin-bottom:16px" name="email"><br> <label for="message">Your Message</label><br>
+<textarea class="textarea" cols="40" id="message" name="message" rows="10" style="overflow:scroll">
+</textarea>
+<br> <input type="submit" class="g-recaptcha" data-sitekey="6LdqXTUfAAAAAILrJyIirDoLCYJg8iKnIE5HosYO" data-callback="onSubmit" data-action="submit"
+    value="Send Me A Message"><br>
+</form>
+<div class="h"><h2 id="my-rates">My rates</h2><a aria-hidden="true" href="#my-rates">[link]</a></div>
+<p>For on-site visits within the Greater Brisbane Area, my fee is $132 for the first hour, and $110/hour afterwards.</p>
+<p>For shorter projects or once-off support via email/online, my rate is $110.</p>
+<p>Otherwise, my rate for longer projects, regular recurring work, or on retainer is $88/hour.</p>
+<p>(All prices are in Australian Dollars, and GST inclusive. I am available to work remotely/internationally.)</p>
 <div id="footer">
 
 </div>
