Fix site structure changes reflected in links

--- a/2022-05-05---Introduction.html
+++ b/2022-05-05---Introduction.html
@@ -94,10 +94,10 @@
             </a>
             <h2 class="sr-only" id="main-menu-heading">Main menu</h2>
             <ul aria-labelledby="main-menu-heading">
-              <li><a href="about.html" title="About me">About me</a></li>
-              <li><a href="contact.html" title="About me">Contact me</a></li>
-              <li><a href="my-portfolio.html" title="About me">My portfolio</a></li>
-              <li><a href="my-research.html" title="About me">My research</a></li>
+              <li><a href="/about.html" title="About me">About me</a></li>
+              <li><a href="/contact.html" title="About me">Contact me</a></li>
+              <li><a href="/my-portfolio.html" title="About me">My portfolio</a></li>
+              <li><a href="/my-research.html" title="About me">My research</a></li>
             </ul>
           </nav>
         </div>
@@ -109,7 +109,7 @@
 <p>I'm a web developer, a DevOps person, and a computer scientist, interested in software verification, automated reasoning/deduction, and their relationship to artificial intelligence (AI). Amongst many other things!</p>
 <p>I'm gathering my work together here, so people can find me for collaborations and paid projects through my consultancy business.</p>
 <p>I'm also posting my thoughts on various tech topics, with descriptions of my projects and where to next.</p>
-<p>If you'd like to get in touch, please use the <a href="/pages/contact">contact form here</a></p>
+<p>If you'd like to get in touch, please use the <a href="/contact.html">contact form here</a></p>
 <p>Have a lovely day!</p>
 <div id="footer">
 
