--- a/my-portfolio.html
+++ b/my-portfolio.html
@@ -94,10 +94,10 @@
             </a>
             <h2 class="sr-only" id="main-menu-heading">Main menu</h2>
             <ul aria-labelledby="main-menu-heading">
-              <li><a href="about.html" title="About me">About me</a></li>
-              <li><a href="contact.html" title="About me">Contact me</a></li>
-              <li><a href="my-portfolio.html" title="About me">My portfolio</a></li>
-              <li><a href="my-research.html" title="About me">My research</a></li>
+              <li><a href="/about.html" title="About me">About me</a></li>
+              <li><a href="/contact.html" title="About me">Contact me</a></li>
+              <li><a href="/my-portfolio.html" title="About me">My portfolio</a></li>
+              <li><a href="/my-research.html" title="About me">My research</a></li>
             </ul>
           </nav>
         </div>
@@ -107,7 +107,7 @@
       <div class="page">
 <p>I've worn a lot of hats in the professional IT world.</p>
 <p>Project management, software architect, senior developer, desktop support, dev ops lead, even company director.</p>
-<p>I can be a one-person IT department. Build you a computer, a website, or a complex application from scratch. Or diagnose and fix it, if something's gone wrong.</p>
+<p>I can be a one-person IT department. Build you a computer, a website, or a complex application from scratch. Or diagnose and fix it, if something's gone wrong. Then document what I've done in accessible language.</p>
 <p>And if I don't know how to do something? I can learn how to. Fast. (I've made a career out of it, around <a href="https://github.com/sgkasselau">my open-source work</a>)</p>
 <p>And while I've worked on million dollar projects for billion dollar companies? (See <a href="https://www.linkedin.com/in/sgkassel">my LinkedIn profile</a> here.)</p>
 <p>I'm just as much here for the home business, the startup, the hobby project, and the labour of love.</p>
@@ -117,7 +117,7 @@
 <li><p>fixed WordPress issues for the <a href="https://pinkadvocate.com/">Pink Advocate</a></p></li>
 <li><p>replaced and modernised an aging complex PHP site with a new Python/Django site, built from scratch with custom hosting and monitoring</p></li>
 </ul>
-<p>If this sound useful to you, please <a href="/pages/contact">contact me</a> - I'm happy to help however I can!</p>
+<p>If this sounds useful to you, please <a href="/contact.html">contact me</a> - I'm happy to help however I can!</p>
 <div id="footer">
 
 </div>
