--- a/contact.html
+++ b/contact.html
@@ -94,10 +94,10 @@
             </a>
             <h2 class="sr-only" id="main-menu-heading">Main menu</h2>
             <ul aria-labelledby="main-menu-heading">
-              <li><a href="about.html" title="About me">About me</a></li>
-              <li><a href="contact.html" title="About me">Contact me</a></li>
-              <li><a href="my-portfolio.html" title="About me">My portfolio</a></li>
-              <li><a href="my-research.html" title="About me">My research</a></li>
+              <li><a href="/about.html" title="About me">About me</a></li>
+              <li><a href="/contact.html" title="About me">Contact me</a></li>
+              <li><a href="/my-portfolio.html" title="About me">My portfolio</a></li>
+              <li><a href="/my-research.html" title="About me">My research</a></li>
             </ul>
           </nav>
         </div>
