--- a/my-research.html
+++ b/my-research.html
@@ -94,10 +94,10 @@
             </a>
             <h2 class="sr-only" id="main-menu-heading">Main menu</h2>
             <ul aria-labelledby="main-menu-heading">
-              <li><a href="about.html" title="About me">About me</a></li>
-              <li><a href="contact.html" title="About me">Contact me</a></li>
-              <li><a href="my-portfolio.html" title="About me">My portfolio</a></li>
-              <li><a href="my-research.html" title="About me">My research</a></li>
+              <li><a href="/about.html" title="About me">About me</a></li>
+              <li><a href="/contact.html" title="About me">Contact me</a></li>
+              <li><a href="/my-portfolio.html" title="About me">My portfolio</a></li>
+              <li><a href="/my-research.html" title="About me">My research</a></li>
             </ul>
           </nav>
         </div>
@@ -132,7 +132,7 @@
 <div class="footnotes">
 <hr />
 <ol>
-<li id="fn1"><p>Anyone who's come here from the academic side of the internet may know me under a different name. If you knew me then - or just are curious - please feel free to <a href="/pages/contact">contact me</a>!<a href="#fnref1">↩</a></p></li>
+<li id="fn1"><p>Anyone who's come here from the academic side of the internet may know me under a different name. If you knew me then - or just are curious - please feel free to <a href="/contact.html">contact me</a>!<a href="#fnref1">↩</a></p></li>
 </ol>
 </div>
       </div>
