Fix yet another link

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 <p>I'm a web developer, a DevOps person, and a computer scientist, interested in software verification, automated reasoning/deduction, and their relationship to artificial intelligence (AI). Amongst many other things!</p>
 <p>I'm gathering my work together here, so people can find me for collaborations and paid projects through my consultancy business.</p>
 <p>I'm also posting my thoughts on various tech topics, with descriptions of my projects and where to next.</p>
-<p>If you'd like to get in touch, please use the <a href="/pages/contact">contact form here</a></p>
+<p>If you'd like to get in touch, please use the <a href="/contact.html">contact form here</a></p>
 <p>Here's some recent blog entries:</p>
 <p><a href="/2022-05-05---Introduction.html" class="title">Introduction</a> [Thursday 05 May 2022]</p>
 <p><a href="/2022-05-07---What-is-pyaixi.html" class="title">What is pyaixi</a> [Saturday 07 May 2022]</p>
